--- a/templates/todo.html
+++ b/templates/todo.html
@@ -3,32 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Backbone.js Todos</title>
-  <link rel="stylesheet" href="{{url_for('static', filename='assets/todos.css')}}"/>
+  <title>Kafka Connect demo app</title>
+  <link rel="stylesheet" href="{{url_for('static', filename='assets/demo.css')}}"/>
 </head>
 
 <body>
   <div id="todoapp">
     <header>
-      <h1>Todos</h1>
-      <input id="new-todo" type="text" placeholder="What needs to be done?">
+      <h1>Kafka Connect demo</h1>
+      <input id="new-todo" type="text" placeholder="Avito Kafka meetup 23.01.2020">
     </header>
-
-    <section id="main">
-      <input id="toggle-all" type="checkbox">
-      <label for="toggle-all">Mark all as complete</label>
-      <ul id="todo-list"></ul>
-    </section>
-
-    <footer>
-      <a id="clear-completed">Clear completed</a>
-      <div id="todo-count"></div>
-    </footer>
-  </div>
-
-  <div id="instructions">
-    Double-click to edit a todo.
-  </div>
 
   <script src="{{url_for('static', filename='assets/vendor/json2.js')}}"></script>
   <script src="{{url_for('static', filename='assets/vendor/jquery.js')}}"></script>
